[project]
name = "ikuai_api"
version = "0.1.0"
description = "ikuai cli"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "typer>=0.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ikuai_cli = "ikuai_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ikuai_api"]